2005-02-21  John W. Eaton  <jwe@octave.org>

	* texi2dvi: Delete our private version.

	* Makeconf.in (MAKEINFO): Define.
	(TEXI2DVI): Define as texi2dvi, not $(top_srcdir)/texi2dvi.

2005-02-09  John W. Eaton  <jwe@octave.org>

	* configure.in: Check for canonicalize_file_name and resolvepath.

2005-02-02  John W. Eaton  <jwe@octave.org>

	* config.guess, config.sub: Update from FSF sources.

2005-01-18  John W. Eaton  <jwe@octave.org>

	* octave-bug.in: Try harder to find default editor (stolen from
	bashbug).

2004-12-17  John W. Eaton  <jwe@octave.org>

	* configure.in: Use AC_GNU_SOURCE.

2004-12-17  Orion Poplawski  <orion@cora.nwra.com>

	* configure.in: Also check for signbit decl.

2004-12-03  John W. Eaton  <jwe@octave.org>

	* aclocal.m4 (OCTAVE_PROG_GPERF): Check with -L C++, not -L ANSI_C.
	* Makefile.in (header-msg): Change recommended gperf version to
	3.0.1 or more recent.

2004-11-12  John W. Eaton  <jwe@octave.org>

	* Back off on -ffloat-store until we decide whether it is really
	necessary.

2004-11-11  John W. Eaton  <jwe@octave.org>

	* (OCTAVE_PROG_GNUPLOT): Don't set GNUPLOT_BINARY before calling
	AC_CHECK_PROGS(GNUPLOT_BINARY, ...).

	* configure.in: Use it to see if the C, C++, and Fortran compilers
	accept -ffloat-store.
	* aclocal.m4 (OCTAVE_F77_FLAG): New macro.

2004-09-08  John W. Eaton  <jwe@octave.org>

	* configure.in (GXX_PICKY_FLAGS): Remove -fno-nonnull-objects.
	(GCC_PICKY_FLAGS): Remove -Wnested-externs -Wid-clash-31.
	From Quentin Spencer <qspencer@ieee.org>.

	* configure.in (GCC_PICKY_FLAGS): Remove -Winline.

2004-09-07  John W. Eaton  <jwe@octave.org>

	* configure.in: Check for round.

2004-06-22  David Bateman  <dbateman@free.fr>

	* configure.in: Use -Wl,-Bsymbolic for MKOCTFILE_DL_LDFLAGS on
	GNU/Linux systems but not for SH_LDFLAGS.
    
2004-04-22  John W. Eaton  <jwe@octave.org>

	* configure.in: Add -Wl,-Bsymbolic to SH_LDFLAGS for GNU/Linux
	systems.  From Fredrik Lingvall <Fredrik.Lingvall@signal.uu.se>.
