@@ -1,3 +1,8 @@
+2005-02-22  Shan G. Smith  <shan@cybertrails.com>
+
+	* mkoctfile.in: If not linking, then use output file name
+	specified with -o.
+
 2005-02-21  John W. Eaton  <jwe@octave.org>
 
 	* texi2dvi: Delete our private version.
